


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Mech_Pet_health_selenium"
version = "0.1.1"
description = ""
authors = []
readme = "readme.md"
packages = [
    { include = "Mech_Pet", from = "venues" },
]
license = "GPL-3.0-only"
exclude = []

[tool.poetry.dependencies]
python = "^3.10"

Emergency = "^2.0.0"

deepdiff = "^7.0.1"
selenium = "^4.22.0"
requests = "^2.32.3"

